<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:text="@string/textViewPhone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPhone"
        android:layout_below="@+id/textViewPhone"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:text="@string/textViewMessageText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewMessageText"
        android:layout_alignBaseline="@id/textViewPhone"
        android:layout_alignParentRight="true"
        android:text="@string/textViewDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

</RelativeLayout>